Every post consider its content in czech

--- a/templates/statie-blog-twig/source/_layouts/post.twig
+++ b/templates/statie-blog-twig/source/_layouts/post.twig
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="cs">
     {# this file is located in "/source/_snippets/head.twig" #}
     {# you can click there thanks to "ide-twig.json" and Symfony plugin #}
     {% include "_snippets/head.twig" %}
