--- a/templates/statie-website-latte/source/_layouts/default.latte
+++ b/templates/statie-website-latte/source/_layouts/default.latte
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="cs">
     {* this file is located in "/source/_snippets/head.latte" *}
     {include "_snippets/head.latte"}
 
